--- a/package.json
+++ b/package.json
@@ -3,14 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.16.1",
+    "axios": "^0.19.2",
     "react": "^16.13.0",
+    "react-animated-number": "^0.4.4",
+    "react-animations": "^1.0.0",
     "react-apexcharts": "^1.3.6",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-share": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
