--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "axios": "^0.19.2",
     "react": "^16.13.0",
     "react-animated-number": "^0.4.4",
-    "react-animations": "^1.0.0",
     "react-apexcharts": "^1.3.6",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
     "react-share": "^4.1.0"
   },
+  "homepage": "https://covid19info.netlify.com/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
