--- a/package.json
+++ b/package.json
@@ -5,18 +5,26 @@
   "dependencies": {
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@nivo/waffle": "^0.61.1",
+    "@svg-maps/hong-kong": "^1.0.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.16.1",
     "axios": "^0.19.2",
+    "datamaps": "^0.5.9",
+    "lodash": "^4.17.15",
     "react": "^16.13.0",
     "react-animated-number": "^0.4.4",
     "react-apexcharts": "^1.3.6",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-share": "^4.1.0"
+    "react-share": "^4.1.0",
+    "react-simple-maps": "^1.0.0-beta.0",
+    "react-svg-map": "^2.0.2",
+    "react-tooltip": "^4.1.2"
   },
   "homepage": "https://covid19info.netlify.com/",
   "scripts": {
