--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.2",
     "datamaps": "^0.5.9",
     "lodash": "^4.17.15",
+    "material-table": "^1.57.2",
     "react": "^16.13.0",
     "react-animated-number": "^0.4.4",
     "react-apexcharts": "^1.3.6",
