--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.2.1",
     "apexcharts": "^3.16.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "datamaps": "^0.5.9",
     "lodash": "^4.17.15",
     "material-table": "^1.57.2",
@@ -20,6 +21,10 @@
     "react-apexcharts": "^1.3.6",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
+    "react-fade-in": "^0.1.8",
+    "react-google-charts": "^3.0.15",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-share": "^4.1.0",
