--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.16.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "country-list": "^2.2.0",
     "datamaps": "^0.5.9",
     "lodash": "^4.17.15",
     "material-table": "^1.57.2",
@@ -27,6 +28,7 @@
     "react-lottie": "^1.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-select-country-list": "^2.1.2",
     "react-share": "^4.1.0",
     "react-simple-maps": "^1.0.0-beta.0",
     "react-svg-map": "^2.0.2",
