--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-apexcharts": "^1.3.6",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
+    "react-facebook": "^8.1.4",
     "react-fade-in": "^0.1.8",
     "react-google-charts": "^3.0.15",
     "react-loading": "^2.0.3",
